# llm-zoomcamp-2026-assignments

./: .gitignore  README.md  main.py  pyproject.toml
01-agentic-rag/: README.md  work.ipynb
02-vector-search/: homework-2.ipynb
03-orchestration/: README.md  homework-3-tokens-comparative.txt  question-5.yaml
04-monitoring/: homework-4.ipynb
05-monitoring/: homework-5.ipynb  rag_helper_hw5.py  rag_traced.py  starter.py  tracer_provider_init.py  traces.db
05-monitoring/responses/: response-q1.json  response-q2.json
agent_client/: rag.py
onnx_embedder/: download.py  embedder.py
