[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-zoomcamp-2026-assignments"
version = "0.1.0"
description = "homeworks for the llm zoomcamp 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "agent_client",
    "toyaikit>=0.0.11",
]
