[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_client", "onnx_embedder"]
py-modules = ["rag_helper", "evaluation_utils"]

[project]
name = "llm-zoomcamp-2026-assignments"
version = "0.1.0"
description = "homeworks for the llm zoomcamp 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "agent_client",
    "toyaikit>=0.0.11",
    "onnxruntime>=1.27.0",
    "tokenizers>=0.23.1",
    "numpy>=2.4.6",
    "tqdm>=4.68.3",
    "pydantic>=2.13.4",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
